@@ -5,6 +5,8 @@ Release 0.9.2
 - add zm_openid
 - set content type for views as 'text/html; charset='.HTML_CHARSET
 - make ZMToolboxHtml::encode() preserve exising entities in strings
+- make admin language tool mark duplicate mappings and add inline warnings if
+  duplicate keys with different values exist; b:#1993788
 
 Release 0.9.1
 - zm_custom_validate_password in zm_master_password does not return a reference!
